Get antlr generation from bazel working under Windows

--- a/internal/parser/BUILD.bazel
+++ b/internal/parser/BUILD.bazel
@@ -72,6 +72,7 @@ sh_binary(
     target_compatible_with = select({
         "@platforms//os:linux": [],
         "@platforms//os:osx": [],
+        "@platforms//os:windows": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
 )
