Add Support for zserio Bytes Type, added in zserio 2.9.0
- In zserio version 2.9.0, the Bytes type was added. It is a built-in type
  that stores byte buffers.
- Unlike extern, bytes stores full bytes, and does not support incomplete
  bytes.

--- a/ztype/BUILD.bazel
+++ b/ztype/BUILD.bazel
@@ -12,6 +12,9 @@ go_library(
         "bits_encode.go",
         "bool_decode.go",
         "bool_encode.go",
+        "bytes.go",
+        "bytes_decode.go",
+        "bytes_encode.go",
         "delta_context.go",
         "doc.go",
         "extern.go",
