--- a/.bazelrc
+++ b/.bazelrc
@@ -11,3 +11,6 @@ build --incompatible_strict_action_env
 # A user specific configuration that have local settings to save the user
 # from typing a lot in their terminal. See ../docs/bazel.md for more info.
 try-import %workspace%/user.bazelrc
+
+# Disable bazel modules.
+common --noenable_bzlmod
