--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,9 @@
 PATH_add bin
 
 [[ -f .envrc.local ]] && source_env .envrc.local
+
+watch_file bazel-out/bazel_env-opt/bin/bazel_env/bin
+PATH_add bazel-out/bazel_env-opt/bin/bazel_env/bin
+if [[ ! -d bazel-out/bazel_env-opt/bin/bazel_env/bin ]]; then
+  log_error "ERROR[bazel_env.bzl]: Run 'bazel run //:bazel_env' to regenerate bazel-out/bazel_env-opt/bin/bazel_env/bin"
+fi
