--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,6 +4,7 @@ module(
     compatibility_level = 1,
 )
 
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "bazel_env.bzl", version = "0.1.0", dev_dependency = True)
 bazel_dep(name = "rules_python", version = "0.33.1", dev_dependency = True)
 bazel_dep(
