--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,8 +5,12 @@ module(
 )
 
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
+bazel_dep(name = "rules_go", version = "0.48.0")
+bazel_dep(name = "gazelle", version = "0.37.0")
+
 bazel_dep(name = "bazel_env.bzl", version = "0.1.0", dev_dependency = True)
 bazel_dep(name = "rules_python", version = "0.33.1", dev_dependency = True)
+bazel_dep(name = "rules_jvm_external", version = "6.1", dev_dependency = True)
 bazel_dep(
     name = "buildifier_prebuilt",
     version = "6.4.0",
@@ -24,3 +28,44 @@ pip.parse(
     requirements_lock = "//test/rules:requirements.txt",
 )
 use_repo(pip, "pip")
+
+go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
+go_sdk.download(
+    version = "1.21.1",
+)
+
+go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
+go_deps.from_file(go_mod = "//:go.mod")
+go_deps.gazelle_default_attributes(
+    build_file_generation = "on",
+    directives = [
+        "gazelle:proto disable",
+    ],
+)
+use_repo(
+    go_deps,
+    "com_github_antlr_antlr4_runtime_go_antlr_v4",
+    "com_github_google_go_cmp",
+    "com_github_iancoleman_strcase",
+    "com_github_icza_bitio",
+    "com_github_masterminds_sprig_v3",
+    "com_github_spf13_cobra",
+    "com_github_stretchr_testify",
+    "com_github_x448_float16",
+    "org_golang_x_exp",
+)
+
+maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
+maven.install(
+    name = "go_zserio_maven_deps",
+    artifacts = [
+        "io.github.ndsev:zserio:2.11.0",
+    ],
+    repositories = [
+        "https://repo.maven.apache.org/maven2/",
+    ],
+)
+use_repo(
+    maven,
+    "go_zserio_maven_deps",
+)
