--- a/test/reference/BUILD.bazel
+++ b/test/reference/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_test")
+load("@rules_go//go:def.bzl", "go_test")
 load("//test/rules:rules.bzl", "zs_payload")
 
 filegroup(
@@ -31,6 +31,6 @@ go_test(
         "//ztype",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
-        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
+        "@rules_go//go/tools/bazel:go_default_library",
     ],
 )
