--- a/test/reference/extern_bytes_array/BUILD.bazel
+++ b/test/reference/extern_bytes_array/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_test")
+load("@rules_go//go:def.bzl", "go_test")
 load("//:rules.bzl", "go_zserio_library")
 load("//test/rules:rules.bzl", "py_zserio_library", "zs_payload")
 
@@ -42,6 +42,6 @@ go_test(
         "//ztype",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
-        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
+        "@rules_go//go/tools/bazel:go_default_library",
     ],
 )
