--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,19 +8,15 @@ bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_go", version = "0.48.0")
 bazel_dep(name = "gazelle", version = "0.37.0")
 
-bazel_dep(name = "bazel_env.bzl", version = "0.1.0", dev_dependency = True)
+bazel_dep(name = "bazel_env.bzl", version = "0.1.1", dev_dependency = True)
 bazel_dep(name = "rules_python", version = "0.33.1", dev_dependency = True)
 bazel_dep(name = "rules_jvm_external", version = "6.1", dev_dependency = True)
-bazel_dep(
-    name = "buildifier_prebuilt",
-    version = "6.4.0",
-    dev_dependency = True,
-)
+bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
 
-python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
 python.toolchain(python_version = "3.12")
 
-pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
 pip.parse(
     experimental_index_url = "https://pypi.org/simple",
     hub_name = "pip",
@@ -55,7 +51,7 @@ use_repo(
     "org_golang_x_exp",
 )
 
-maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
+maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
 maven.install(
     name = "go_zserio_maven_deps",
     artifacts = [
