use a better go version

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -53,7 +53,7 @@ bazel_env(
         "buildifier": "@buildifier_prebuilt//:buildifier",
         "buildozer": "@buildifier_prebuilt//:buildozer",
         "gazelle": "//:gazelle",
-        "go": "@rules_go//:go",
+        "go": "@rules_go//go",
         "gopackagesdriver.sh": "@rules_go//go/tools/gopackagesdriver",
     },
 )
