--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -26,9 +26,7 @@ pip.parse(
 use_repo(pip, "pip")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(
-    version = "1.21.1",
-)
+go_sdk.download(version = "1.21.7")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
@@ -57,6 +55,7 @@ maven.install(
     artifacts = [
         "io.github.ndsev:zserio:2.11.0",
     ],
+    # Update this by running: bazel run @go_zserio_maven_deps//:pin
     lock_file = "//:maven_install.lock.json",
     repositories = [
         "https://repo.maven.apache.org/maven2/",
