--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,6 +19,9 @@ jobs:
       - uses: actions/setup-python@v2
       - uses: pre-commit/action@v2.0.3
 
+      - name: bazel mod tidy
+        run: |
+          ./bin/ensure-unchanged bazel mod tidy
 
       - name: Buildifier
         run: |
