add extra tools to the bazel_env

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -48,12 +48,20 @@ go_library(
 # This is to ensure that common CLI tools are added to the PATH when using direnv.
 bazel_env(
     name = "bazel_env",
+    toolchains = {
+        "jdk": "@rules_java//toolchains:current_host_java_runtime",
+        "python": "@rules_python//python:current_py_toolchain",
+    },
     tools = {
-        # Tools can be specified as labels.
+        # Tools can be provided either as labels or via special make vars that
+        # are provided by the toolchains.
         "buildifier": "@buildifier_prebuilt//:buildifier",
         "buildozer": "@buildifier_prebuilt//:buildozer",
         "gazelle": "//:gazelle",
         "go": "@rules_go//go",
         "gopackagesdriver.sh": "@rules_go//go/tools/gopackagesdriver",
+        "jar": "$(JAVABASE)/bin/jar",
+        "java": "$(JAVA)",
+        "python": "$(PYTHON3)",
     },
 )
