fix: add instructions on setting up VSCode with bzlmod
Fixes #135

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -26,7 +26,10 @@ pip.parse(
 use_repo(pip, "pip")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.21.7")
+go_sdk.download(
+    name = "go-zserio-go-sdk",
+    version = "1.21.7",
+)
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
