Refactor and extract ObjectArray handling
Signed-off-by: Jochen.Mehlhorn <jochen.mehlhorn@mercedes-benz.com>

--- a/ztype/BUILD.bazel
+++ b/ztype/BUILD.bazel
@@ -23,6 +23,10 @@ go_library(
         "float_decode.go",
         "float_encode.go",
         "limits.go",
+        "object_array.go",
+        "object_array_decode.go",
+        "object_array_encode.go",
+        "object_array_traits.go",
         "packed_array_traits.go",
         "packing_context_node.go",
         "string_decode.go",
