Update to current bazel and Go versions
This fixes various build errors on Windows.

--- a/internal/generator/BUILD.bazel
+++ b/internal/generator/BUILD.bazel
@@ -64,6 +64,6 @@ go_test(
         "//internal/model",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
-        "@rules_go//go/tools/bazel:go_default_library",
+        "@rules_go//go/tools/bazel",
     ],
 )
