--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,13 +5,14 @@ module(
 )
 
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
-bazel_dep(name = "rules_go", version = "0.48.0")
-bazel_dep(name = "gazelle", version = "0.37.0")
+bazel_dep(name = "rules_go", version = "0.55.1")
+bazel_dep(name = "gazelle", version = "0.44.0")
 
 bazel_dep(name = "bazel_env.bzl", version = "0.1.1", dev_dependency = True)
 bazel_dep(name = "rules_python", version = "0.33.1", dev_dependency = True)
 bazel_dep(name = "rules_jvm_external", version = "6.1", dev_dependency = True)
-bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
+bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)
+bazel_dep(name = "rules_shell", version = "0.5.0", dev_dependency = True)
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
 python.toolchain(python_version = "3.12")
@@ -28,7 +29,7 @@ use_repo(pip, "pip")
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(
     name = "go-zserio-go-sdk",
-    version = "1.21.7",
+    version = "1.24.4",
 )
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
