--- a/test/reference/BUILD.bazel
+++ b/test/reference/BUILD.bazel
@@ -25,6 +25,6 @@ go_test(
         "//ztype",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
-        "@rules_go//go/tools/bazel:go_default_library",
+        "@rules_go//go/tools/bazel",
     ],
 )
