chore: update the remaining bazel build deps
Summary:
- Update the remaining build deps, which may increase the compatibility
  with latest bazel versions.
- Fix a `.bazelrc` flag that allows the user to not have JAVA installed.
- Bump `bazel` to `8.2.1` which is the latest really stable bazel
  version.
- Move one dependency from WORKSPACE and explicitly enable WORKSPACE
  support for `rules_antlr`. bazel 8 is the last version that will have
  WORKSPACE support so if we want to upgrade past it, we'll have to
  fully look into #137.

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,8 @@
-common --tool_java_runtime_version=remotejdk_17
+common --java_runtime_version=remotejdk_11
 common --test_output=errors
+
+# rules_antlr is still a WORKSPACE-only thing
+common --enable_workspace
 
 # Extra flags to improve the reproducibility
 common --incompatible_disallow_empty_glob
